--- a/portfolio1.html
+++ b/portfolio1.html
@@ -257,13 +257,13 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div><!--/.timeline-->
 							</div>
 						</div>
-						<div class="col-sm-3">
+						<!--<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2022 - 2023</h2>
 									<h3>Master of Science <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
-								<div class="timeline-horizontal-border">
+								<!--<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
 									<span class="single-timeline-horizontal"></span>
 								</div>
@@ -273,20 +273,20 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											Iowa State University
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
-										<p class="description">
+										<!--<p class="description">
 											Explored the impact of sensory cues on user attentional orientation in virtual reality to identify the most effective cues for guiding users through immersive environments. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
-						</div>
+						<!--</div>
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2023 - 2026(expected)</h2>
 									<h3>PhD <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
-								<div class="timeline-horizontal-border">
+								<!--<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
 									<span class="single-timeline-horizontal spacial-horizontal-line
 									"></span>
@@ -297,7 +297,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											Iowa State University
 										<!--</h4>
 										<h5>bolton, united kingdome</h5>-->
-										<p class="description">
+										<!--<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
 									</div><!--/.timeline-content-->
