--- a/portfolio1.html
+++ b/portfolio1.html
@@ -207,7 +207,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!<section id="method" class="method">
 			<div class="section-heading text-center">
 				<h2>Method</h2>
-			</div>
+			<!--</div>
 			<div class="container">
 				<div class="method-horizontal-timeline">
 					<div class="row">
@@ -217,7 +217,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<h2>2012 - 2016</h2>
 									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
-								<div class="timeline-horizontal-border">
+								<!--<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
 									<span class="single-timeline-horizontal"></span>
 								</div>
@@ -227,7 +227,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											Azad University
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
-										<p class="description">
+										<!--<p class="description">
 											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
 										</p>
 									</div><!--/.timeline-content-->
@@ -257,13 +257,13 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div><!--/.timeline-->
 							</div>
 						</div>
-						<!--<div class="col-sm-3">
+						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>2022 - 2023</h2>
 									<h3>Master of Science <span>in </span> HCI</h3>
 								</div><!--/.experience-time-->
-								<!--<div class="timeline-horizontal-border">
+								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
 									<span class="single-timeline-horizontal"></span>
 								</div>
@@ -271,9 +271,9 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="timeline-content">
 										<h4 class="title">
 											Iowa State University
-										<!--</h4>
+										</h4>
 										<h5>north carolina, USA</h5>-->
-										<!--<p class="description">
+										<p class="description">
 											Explored the impact of sensory cues on user attentional orientation in virtual reality to identify the most effective cues for guiding users through immersive environments. 
 										</p>
 									</div><!--/.timeline-content-->
