--- a/portfolio1.html
+++ b/portfolio1.html
@@ -204,9 +204,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--about end -->
 		
 		<!--method start -->
-		<!<section id="method" class="method">
-			<div class="section-heading text-center">
-				<h2>Method</h2>
+		<section id="method" class="skills">
+				<div class="method-content">
+					<div class="method-heading text-center">
+						<h2>methos</h2>
 			</div>
 			<div class="container">
 				<div class="method-horizontal-timeline">
