--- a/portfolio1.html
+++ b/portfolio1.html
@@ -204,10 +204,9 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--about end -->
 		
 		<!--method start -->
-		<section id="method" class="skills">
-				<div class="method-content">
-					<div class="method-heading text-center">
-						<h2>methos</h2>
+		<section id="method" class="education">
+			<div class="method-heading text-center">
+				<h2>method</h2>
 			</div>
 			<div class="container">
 				<div class="method-horizontal-timeline">
