--- a/portfolio1.html
+++ b/portfolio1.html
@@ -214,7 +214,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2012 - 2016</h2>
+									<h2>Task design</h2>
 									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
@@ -237,7 +237,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
-									<h2>2020 - 2022</h2>
+									<h2>Study Design</h2>
 									<h3>Master <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
