--- a/portfolio1.html
+++ b/portfolio1.html
@@ -215,7 +215,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>Task design</h2>
-									<h3>Bachelor <span>of </span> Architecture</h3>
+									<!--<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -223,12 +223,12 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<h4 class="title">
+										<!--<h4 class="title">
 											Azad University
 										</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
+											3 key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
@@ -246,12 +246,12 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<h4 class="title">
+										<!--<h4 class="title">
 											Iowa State University
 										<!--</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Concentrated on advanced spatial design, user behavior analysis,, and the integration of technology and sustainability.
+											X key steps: participant recruitment, setting, study introduction, practice session & task, survey. 
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
