--- a/portfolio1.html
+++ b/portfolio1.html
@@ -215,7 +215,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>Task design</h2>
-									<!--<h3>Bachelor <span>of </span> Architecture</h3>
+									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -223,7 +223,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!--<h4 class="title">
+										<h4 class="title">
 											Azad University
 										</h4>
 										<h5>north carolina, USA</h5>-->
@@ -246,9 +246,9 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!--<h4 class="title">
+										<h4 class="title">
 											Iowa State University
-										<!--</h4>
+										</h4>
 										<h5>north carolina, USA</h5>-->
 										<p class="description">
 											X key steps: participant recruitment, setting, study introduction, practice session & task, survey. 
