--- a/portfolio1.html
+++ b/portfolio1.html
@@ -312,7 +312,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--Method end -->
 
 		<!--skills start -->
-		<section id="skills" class="skills">
+		<!--<section id="skills" class="skills">
 				<div class="skill-content">
 					<div class="section-heading text-center">
 						<h2>skills</h2>
@@ -332,7 +332,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>90%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText">Quantitative research</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
@@ -343,7 +343,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>85%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText">Unity</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
@@ -354,7 +354,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>70%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText">Blender</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
@@ -367,7 +367,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!-- /.barWrapper -->
 								</div>
 							</div>
-							<div class="col-md-6">
+							<!--<div class="col-md-6">
 								<div class="single-skill-content">
 									<div class="barWrapper">
 										<span class="progressText">Idea Generation</span>
@@ -380,7 +380,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>90%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText">Concept diagramming</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
@@ -391,7 +391,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>90%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText">Project Planning and Time Management</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
@@ -402,7 +402,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<h3>95%</h3>	
 										</div>
 									</div><!-- /.barWrapper -->
-									<div class="barWrapper">
+									<!--<div class="barWrapper">
 										<span class="progressText"> Cross-functional Teamwork</span>
 										<div class="single-progress-txt">
 											<div class="progress ">
