--- a/portfolio1.html
+++ b/portfolio1.html
@@ -78,9 +78,9 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                    <li class=" smooth-menu"><a href="#method">metho9d</a></li>
+			                    <li class=" smooth-menu"><a href="#method">method</a></li>
 			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
-			                    <li class="smooth-menu"><a href="#experience">experience</a></li>
+			                    <li class="smooth-menu"><a href="task design">task design</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
 			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
 			                    <!--<li class="smooth-menu"><a href="#clients">clients</a></li>-->
@@ -423,12 +423,12 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--skills end -->
 
 		<!--experience start -->
-		<section id="experience" class="experience">
+		<section id="task design" class="task design">
 			<div class="section-heading text-center">
-				<h2>experience</h2>
+				<h2>task design</h2>
 			</div>
 			<div class="container">
-				<div class="experience-content">
+				<div class="task design-content">
 						<div class="main-timeline">
 							<ul>
 								
@@ -437,10 +437,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>Aug2023 – May2025</h2>
 													<h3>UX researcher & designer</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -464,10 +464,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>May2024 – Jul2024</h2>
 													<h3>Research & 3D Modeling Mentor</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -491,10 +491,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>Aug2022 – May2024</h2>
 													<h3>University Instructor</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -518,10 +518,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>Aug2022 – Dec2023</h2>
 													<h3>UX researcher & designer</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -545,10 +545,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>May2023 – Jul2023</h2>
 													<h3>Research & 3D Modeling Mentor</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -572,10 +572,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>Jan2022 - Aug2022</h2>
 													<h3>Architect Intern</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -599,10 +599,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
-												<div class="experience-time text-right">
+												<div class="task design-time text-right">
 													<h2>May2016 - Nov2018</h2>
 													<h3>founder, owner, designer</h3>
-												</div><!--/.experience-time-->
+												</div><!--/.task designe-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
@@ -623,11 +623,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 								</li>
 							</ul>
 						</div><!--.main-timeline-->
-					</div><!--.experience-content-->
+					</div><!--.task design-content-->
 			</div>
 
-		</section><!--/.experience-->
-		<!--experience end -->
+		</section><!--/.task design-->
+		<!--task design end -->
 
 		<!--profiles start -->
 		<section id="profiles" class="profiles">
