--- a/portfolio1.html
+++ b/portfolio1.html
@@ -79,7 +79,7 @@
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
 			                    <li class=" smooth-menu"><a href="#method">method</a></li>
-			                    <li class="smooth-menu"><a href="#skills">skills</a></li>
+			                    <!--<li class="smooth-menu"><a href="#skills">skills</a></li>-->
 			                    <li class="smooth-menu"><a href="task design">task design</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
 			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
