--- a/portfolio1.html
+++ b/portfolio1.html
@@ -438,8 +438,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>Aug2023 – May2025</h2>
-													<h3>UX researcher & designer</h3>
+													<h2>spatial environment</h2>
+													<h3>Google map, AutoCad, Rhino 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -447,11 +447,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															NSF-Funded Cybersecurity Research 
+															Google map, AutoCad, Rhino 3D 
 														</h4>
-														<h5>Iowa State University, IA, USA</h5>
+														<h5></h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															The virtual environment modeled a section of the Louvre Museum's Denon wing, featuring rooms 700–702 and 710–712 to ensure a balanced layout. Approximately 30% of the paintings were removed to maintain participant focus. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
