--- a/portfolio1.html
+++ b/portfolio1.html
@@ -439,7 +439,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<div class="col-md-5">
 												<div class="task design-time text-right">
 													<h2>spatial environment</h2>
-													<h3>Google map, AutoCad, Rhino 3D</h3>
+													<h3></h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -465,8 +465,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>May2024 – Jul2024</h2>
-													<h3>Research & 3D Modeling Mentor</h3>
+													<h2>3D modeling</h2>
+													<h3></h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -474,11 +474,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															NSF REU (Research Experience for Undergrads)
+															Rhino 3D
 														</h4>
-														<h5>Iowa State University, Ai, USA</h5>
+														<h5></h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Rooms were modeled in Rhinoceros 3D, highlighting key architectural elements while omitting intricate details to avoid distracting participants. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -492,8 +492,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>Aug2022 – May2024</h2>
-													<h3>University Instructor</h3>
+													<h2>Equipment and Interactions</h2>
+													<h3></h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -501,11 +501,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Architecture Studio Course
+															Unity
 														</h4>
-														<h5>Iowa State University, AI, USA</h5>
+														<h5></h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															The model was imported into Unity, where seven target paintings were placed across rooms. Participants used a Meta Quest Pro with a counter showing collected paintings and a task list to aid memory. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -519,8 +519,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>Aug2022 – Dec2023</h2>
-													<h3>UX researcher & designer</h3>
+													<h2>Conditions3</h2>
+													<h3></h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -528,11 +528,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Master Thesis on Sensory Cues in Virtual Reality
+															Unity
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
+															Four sensory cue conditions were tested: 1)Control Condition: 90° front field of view, no cues, 2)Mirror Condition: Rear-view mirror extending vision behind participants, 3)Audio Condition: Beep sound within a 5-meter radius of targets, 4)Haptic Condition: Controller vibration within a 5-meter radius of targets. Each participant experienced only one condition, maintaining task consistency across groups. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -541,7 +541,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -550,7 +550,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<h3>Research & 3D Modeling Mentor</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -568,7 +568,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -577,7 +577,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<h3>Architect Intern</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
@@ -595,7 +595,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!--/.single-timeline-box-->
 								</li>
 
-								<li>
+								<!--<li>
 									<div class="single-timeline-box fix">
 										<div class="row">
 											<div class="col-md-5">
@@ -604,7 +604,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<h3>founder, owner, designer</h3>
 												</div><!--/.task designe-time-->
 											</div><!--/.col-->
-											<div class="col-md-offset-1 col-md-5">
+											<!--<div class="col-md-offset-1 col-md-5">
 												<div class="timeline">
 													<div class="timeline-content">
 														<h4 class="title">
