--- a/portfolio1.html
+++ b/portfolio1.html
@@ -439,7 +439,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											<div class="col-md-5">
 												<div class="task design-time text-right">
 													<h2>spatial environment</h2>
-													<h3></h3>
+													<h3>Google map, AutoCad, Rhino 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -447,7 +447,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 													<div class="timeline-content">
 														<h4 class="title">
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
-															Google map, AutoCad, Rhino 3D 
+															 
 														</h4>
 														<h5></h5>
 														<p class="description">
