--- a/portfolio1.html
+++ b/portfolio1.html
@@ -83,7 +83,7 @@
 			                    <li class="smooth-menu"><a href="task design">task design</a></li>
 					    <li class="smooth-menu"><a href="study design">study design</a></li>
 			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
-			                    <li class="smooth-menu"><a href="#portfolio">portfolio</a></li>
+			                    <!--<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>-->
 			                    <!--<li class="smooth-menu"><a href="#clients">clients</a></li>-->
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
 			                </ul><!--/.nav -->
@@ -970,7 +970,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--profiles end -->
 
 		<!--portfolio start -->
-		<section id="portfolio" class="portfolio">
+		<!--<section id="portfolio" class="portfolio">
 			<div class="portfolio-details">
 				<div class="section-heading text-center">
 					<h2>portfolio</h2>
@@ -989,7 +989,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
-									<div class="item">
+									<!--<div class="item">
 										<img src="assets/images/portfolio/p2.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
@@ -999,7 +999,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 
-								<div class="col-sm-4">
+								<!--<div class="col-sm-4">
 									<div class="item">
 										<img src="assets/images/portfolio/p3.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
@@ -1010,7 +1010,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 									</div><!-- /.item -->
 								</div><!-- /.col -->
 
-								<div class="col-sm-4">
+								<!--<div class="col-sm-4">
 									<div class="item">
 										<img src="assets/images/portfolio/p4.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
@@ -1019,7 +1019,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 											</a>
 										</div><!-- /.isotope-overlay -->
 									</div><!-- /.item -->
-									<div class="item">
+									<!--<div class="item">
 										<img src="assets/images/portfolio/p5.jpg" alt="portfolio image"/>
 										<div class="isotope-overlay">
 											<a href="#">
