--- a/portfolio1.html
+++ b/portfolio1.html
@@ -520,7 +520,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
-													<h2>Conditions3</h2>
+													<h2>Conditions</h2>
 													<h3>Unity</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
@@ -646,8 +646,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
-													<h2>spatial environment</h2>
-													<h3>Google map, AutoCad, Rhino 3D</h3>
+													<h2>Participants</h2>
+													<h3>Qualtrics</h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -659,7 +659,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 														</h4>
 														<h5></h5>
 														<p class="description">
-															The virtual environment modeled a section of the Louvre Museum's Denon wing, featuring rooms 700–702 and 710–712 to ensure a balanced layout. Approximately 30% of the paintings were removed to maintain participant focus. 
+															The study included 71 university participants (30 female, 41 male), aged 18-35, screened for eligibility based on vision and motion sensitivity. Participants varied in gaming experience, with only two having prior, minimal familiarity with the Louvre. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -673,8 +673,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
-													<h2>3D modeling</h2>
-													<h3>Rhino 3D</h3>
+													<h2>Setting</h2>
+													<h3></h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -686,7 +686,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 														</h4>
 														<h5></h5>
 														<p class="description">
-															Rooms were modeled in Rhinoceros 3D, highlighting key architectural elements while omitting intricate details to avoid distracting participants. 
+															Experiments were conducted in a distraction-free lab space, where participants navigated the virtual environment seated, using controllers for movement and interaction. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -700,7 +700,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
-													<h2>Equipment and Interactions</h2>
+													<h2>Target Introduction, Practice Session and Task</h2>
 													<h3>Unity</h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
@@ -713,7 +713,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 														</h4>
 														<h5></h5>
 														<p class="description">
-															The model was imported into Unity, where seven target paintings were placed across rooms. Participants used a Meta Quest Pro with a counter showing collected paintings and a task list to aid memory. 
+															Participants were briefly shown a printed list of seven target paintings. In the VR environment, they could access the list in their left hand as a reference.Participants completed a three-minute practice session in VR to learn controls and task requirements, then began the task, with data recorded in a timed 20-minute session.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
@@ -727,8 +727,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 										<div class="row">
 											<div class="col-md-5">
 												<div class="study design-time text-right">
-													<h2>Conditions3</h2>
-													<h3>Unity</h3>
+													<h2>Survey</h2>
+													<h3></h3>
 												</div><!--/.study design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -740,7 +740,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 														</h4>
 														<h5>Iowa State University, IA, USA</h5>
 														<p class="description">
-															Four sensory cue conditions were tested: 1)Control Condition: 90° front field of view, no cues, 2)Mirror Condition: Rear-view mirror extending vision behind participants, 3)Audio Condition: Beep sound within a 5-meter radius of targets, 4)Haptic Condition: Controller vibration within a 5-meter radius of targets. Each participant experienced only one condition, maintaining task consistency across groups. 
+															After completing the task, participants filled out a survey on task enjoyment, immersion, cue effectiveness, and willingness to try similar tasks, followed by the NASA-TLX, Presence Questionnaire, and Simulator Sickness Questionnaire.
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
