--- a/portfolio1.html
+++ b/portfolio1.html
@@ -82,7 +82,7 @@
 			                    <!--<li class="smooth-menu"><a href="#skills">skills</a></li>-->
 			                    <li class="smooth-menu"><a href="task design">task design</a></li>
 					    <li class="smooth-menu"><a href="study design">study design</a></li>
-			                    <li class="smooth-menu"><a href="#profiles">profile</a></li>
+			                    <!--<li class="smooth-menu"><a href="#profiles">profile</a></li>-->
 			                    <!--<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>-->
 			                    <!--<li class="smooth-menu"><a href="#clients">clients</a></li>-->
 			                    <li class="smooth-menu"><a href="#contact">contact</a></li>
@@ -531,7 +531,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															
 														</h4>
-														<h5>Iowa State University, IA, USA</h5>
+														<h5></h5>
 														<p class="description">
 															Four sensory cue conditions were tested: 1)Control Condition: 90° front field of view, no cues, 2)Mirror Condition: Rear-view mirror extending vision behind participants, 3)Audio Condition: Beep sound within a 5-meter radius of targets, 4)Haptic Condition: Controller vibration within a 5-meter radius of targets. Each participant experienced only one condition, maintaining task consistency across groups. 
 														</p>
@@ -738,7 +738,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
 															
 														</h4>
-														<h5>Iowa State University, IA, USA</h5>
+														<h5></h5>
 														<p class="description">
 															After completing the task, participants filled out a survey on task enjoyment, immersion, cue effectiveness, and willingness to try similar tasks, followed by the NASA-TLX, Presence Questionnaire, and Simulator Sickness Questionnaire.
 														</p>
@@ -838,7 +838,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--study design end -->
 
 		<!--profiles start -->
-		<section id="profiles" class="profiles">
+		<!--<section id="profiles" class="profiles">
 			<div class="profiles-details">
 				<div class="section-heading text-center">
 					<h2>profiles</h2>
