--- a/portfolio1.html
+++ b/portfolio1.html
@@ -837,10 +837,10 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		</section><!--/.study design-->
 		<!--study design end -->
 
-		<!--about start -->
+		<!--about quant -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>Effectiveness of Guidance Cues for Visual Targets in Virtual Environments</h2>
+				<h2>Quantitative Findings and Analysis</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -849,11 +849,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 							<div class="single-about-txt">
 								<h3>
 									
-Introduction
-Virtual reality (VR) offers immersive experiences in areas like training and education, but effective guidance cues are needed to maintain immersion. Designing these cues to support user navigation without breaking presence is challenging.
-
-Problem Statement
-This study evaluates passive (rear-view mirror) and active (audio and haptic) guidance cues in a VR scavenger hunt task. By assessing their effects on user performance and immersion, this research provides insights into optimal guidance design for VR environments.
+Participants' performance data included their ID, timestamps of events, cue triggers (within five meters of a target), and target painting interactions. The "Painting" variable logged each target seen or interacted with, depending on the cue type (visual, audio, or haptic). Key evaluation metrics were (1) frequency of task list checks, (2) total task completion time, and (3) responses from three survey questionnaires. Free-response survey answers underwent thematic analysis to identify common themes. Findings showed that guidance cues influenced attention orientation, though with some unexpected results. The active cues (audio and haptic) effectively reduced task list checks, as anticipated. However, the rear-view mirror led to more frequent task list checks and longer completion times, possibly due to mirror placement or design issues that made users less certain of target locations.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
@@ -923,13 +919,13 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 					</div>
 				</div>
 			</div>
-		</section><!--/.about-->
-		<!--about end -->
+		</section><!--/.quant-->
+		<!--quant end -->
 
-		<!--about start -->
+		<!--about qual -->
 		<section id="about" class="about">
 			<div class="section-heading text-center">
-				<h2>Effectiveness of Guidance Cues for Visual Targets in Virtual Environments</h2>
+				<h2>Qualitative Findings and Analysis</h2>
 			</div>
 			<div class="container">
 				<div class="about-content">
@@ -938,11 +934,11 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 							<div class="single-about-txt">
 								<h3>
 									
-Introduction
-Virtual reality (VR) offers immersive experiences in areas like training and education, but effective guidance cues are needed to maintain immersion. Designing these cues to support user navigation without breaking presence is challenging.
+After completing the VR task, participants answered eight open-ended questions to provide feedback on their experience. Responses were organized into five main categories—beneficial, difficult, fun, time tracking, and retrying the game—and further distilled into two key themes: effectiveness and engagement.
 
-Problem Statement
-This study evaluates passive (rear-view mirror) and active (audio and haptic) guidance cues in a VR scavenger hunt task. By assessing their effects on user performance and immersion, this research provides insights into optimal guidance design for VR environments.
+Effectiveness: Participants in the audio and haptic conditions consistently found the cues helpful, with some noting that cues prevented them from missing paintings. In contrast, 47% in the mirror condition barely used the mirror, with only 6% using it frequently. Many in the control and mirror conditions found the task challenging, while those in audio and haptic conditions found it manageable.
+
+Engagement: Cues increased engagement across all groups. Enjoyment ratings were high, especially in audio (100%) and haptic (86%) conditions, where cues helped participants stay focused. Time perception also varied; most participants in the audio (76%) and control (70%) conditions felt a “loss of time,” indicating deep engagement. Overall, 85-100% across all conditions expressed willingness to try the task again.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
@@ -1012,8 +1008,8 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 					</div>
 				</div>
 			</div>
-		</section><!--/.about-->
-		<!--about end -->
+		</section><!--/.qual-->
+		<!--qual end -->
 		
 		<!--profiles start -->
 		<!--<section id="profiles" class="profiles">
