--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="timeline-content">
 										<h4 class="title">
 											Azad University
-										<!--</h4>
-										<h5>north carolina, USA</h5>-->
+										</h4>
+										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Focused on the fundamentals of architectural design, human-centered design principles, spatial experience, and construction methods.
 										</p>
@@ -244,8 +244,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="timeline-content">
 										<h4 class="title">
 											Iowa State University
-										<!--</h4>
-										<h5>north carolina, USA</h5>-->
+										</h4>
+										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Concentrated on advanced spatial design, user behavior analysis,, and the integration of technology and sustainability.
 										</p>
@@ -267,8 +267,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="timeline-content">
 										<h4 class="title">
 											Iowa State University
-										<!--</h4>
-										<h5>north carolina, USA</h5>-->
+										</h4>
+										<!--<h5>north carolina, USA</h5>-->
 										<p class="description">
 											Explored the impact of sensory cues on user attentional orientation in virtual reality to identify the most effective cues for guiding users through immersive environments. 
 										</p>
@@ -291,8 +291,8 @@ I am a passionate researcher and designer with a deep understanding of the conte
 									<div class="timeline-content">
 										<h4 class="title">
 											Iowa State University
-										<!--</h4>
-										<h5>bolton, united kingdome</h5>-->
+										</h4>
+										<!--<h5>bolton, united kingdome</h5>-->
 										<p class="description">
 											Duis aute irure dolor in reprehenderit in vol patate velit esse cillum dolore eu fugiat nulla pari. Excepteur sint occana inna tecat cupidatat non proident. 
 										</p>
