--- a/index.html
+++ b/index.html
@@ -972,11 +972,17 @@ I am a passionate researcher and designer with a deep understanding of the conte
 				<h2>Contact Me</h2>
 			</div>
 			<div class="container text-center" style="margin-top: 20px;">
-				<p>
-					<strong>Hila Sabouni</strong> | 
-					<a href="mailto:your.email@example.com">hsabouni@iastate.edu</a> |  
-					<a href="https://www.linkedin.com/in/yourprofile" target="_blank">www.linkedin.com/in/hilasabouni</a>
-				</p>
+				<p><strong>Hila Sabouni</strong></p>
+				    <p>
+					<a href="mailto:hsabouni@iastate.edu">
+					    <i class="fas fa-envelope icon"></i>hsabouni@iastate.edu
+					</a>
+				    </p>
+				    <p>
+					<a href="https://www.linkedin.com/in/hilasabouni" target="_blank">
+					    <i class="fab fa-linkedin icon"></i>www.linkedin.com/in/hilasabouni
+					</a>
+				    </p>
 			</div>
 		</section>
 		<!-- Contact End -->
@@ -986,7 +992,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 			<div class="container">
 				<div class="hm-footer-copyright text-center">
 					<p>
-						&copy; copyright yourname. design and developed by <a href="https://www.themesine.com/">themesine</a>
+						&copy; copyright HilaSabouni. design and developed by <a href="https://www.themesine.com/">themesine</a>
 					</p><!--/p-->
 				</div><!--/.text-center-->
 			</div><!--/.container-->
