--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<link rel="shortcut icon" type="image/icon" href="assets/logo/favicon.png"/>
        
         <!--font-awesome.min.css-->
-        <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
 		<!--flat icon css-->
 		<link rel="stylesheet" href="assets/css/flaticon.css">
