--- a/index.html
+++ b/index.html
@@ -972,17 +972,19 @@ I am a passionate researcher and designer with a deep understanding of the conte
 				<h2>Contact Me</h2>
 			</div>
 			<div class="container text-center" style="margin-top: 20px;">
-				<p><strong>Hila Sabouni</strong></p>
-				    <p>
-					<a href="mailto:hsabouni@iastate.edu">
-					    <i class="fas fa-envelope icon"></i>hsabouni@iastate.edu
-					</a>
-				    </p>
-				    <p>
-					<a href="https://www.linkedin.com/in/hilasabouni" target="_blank">
-					    <i class="fab fa-linkedin icon"></i>www.linkedin.com/in/hilasabouni
-					</a>
-				    </p>
+				<div class="contact-info">
+			            <p><strong>Hila Sabouni</strong></p>
+			            <p>
+			                <a href="mailto:hsabouni@iastate.edu">
+			                    <i class="fas fa-envelope icon"></i>hsabouni@iastate.edu
+			                </a>
+			            </p>
+			            <p>
+			                <a href="https://www.linkedin.com/in/hilasabouni" target="_blank">
+			                    <i class="fab fa-linkedin icon"></i>www.linkedin.com/in/hilasabouni
+			                </a>
+			            </p>
+			        </div>
 			</div>
 		</section>
 		<!-- Contact End -->
