--- a/index.html
+++ b/index.html
@@ -975,9 +975,7 @@ I am a passionate researcher and designer with a deep understanding of the conte
 				<div class="contact-info">
 			            <p><strong>Hila Sabouni</strong></p>
 			            <p>
-			                <a href="mailto:hsabouni@iastate.edu">
-			                    <i class="fas fa-envelope icon"></i>hsabouni@iastate.edu
-			                </a>
+			                    <i class="fas fa-envelope icon"></i>hsabouni[at]iastate[dot]edu
 			            </p>
 			            <p>
 			                <a href="https://www.linkedin.com/in/hilasabouni" target="_blank">
