--- a/portfolio1.html
+++ b/portfolio1.html
@@ -78,10 +78,11 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-			                    <li class=" smooth-menu"><a href="#method">method</a></li>
+					    <li class="smooth-menu"><a href="index.html">Home</a></li>
+			                    <li class="smooth-menu"><a href="#method">method</a></li>
 			                    <!--<li class="smooth-menu"><a href="#skills">skills</a></li>-->
-			                    <li class="smooth-menu"><a href="task design">task design</a></li>
-					    <li class="smooth-menu"><a href="study design">study design</a></li>
+			                    <li class="smooth-menu"><a href="#task-design">task design</a></li>
+					    <li class="smooth-menu"><a href="#study-design">study design</a></li>
 			                    <!--<li class="smooth-menu"><a href="#profiles">profile</a></li>-->
 			                    <!--<li class="smooth-menu"><a href="#portfolio">portfolio</a></li>-->
 			                    <!--<li class="smooth-menu"><a href="#clients">clients</a></li>-->
@@ -424,7 +425,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--skills end -->
 
 		<!--task design start -->
-		<section id="task design" class="task design">
+		<section id="task-design" class="task design">
 			<div class="section-heading text-center">
 				<h2>task design</h2>
 			</div>
@@ -631,7 +632,7 @@ This study evaluates passive (rear-view mirror) and active (audio and haptic) gu
 		<!--task design end -->
 
 		<!--study design start -->
-		<section id="study design" class="study design">
+		<section id="study-design" class="study design">
 			<div class="section-heading text-center">
 				<h2>study design</h2>
 			</div>
