--- a/portfolio1.html
+++ b/portfolio1.html
@@ -78,7 +78,7 @@
 			            <div class="collapse navbar-collapse menu-ui-design" id="navbar-menu">
 			                <ul class="nav navbar-nav navbar-right" data-in="fadeInDown" data-out="fadeOutUp">
 			                <li class=" smooth-menu active"></li>
-					    <li class="smooth-menu"><a href="index.html">Home</a></li>
+					    <li><a href="index.html">Home</a></li>
 			                    <li class="smooth-menu"><a href="#method">method</a></li>
 			                    <!--<li class="smooth-menu"><a href="#skills">skills</a></li>-->
 			                    <li class="smooth-menu"><a href="#task-design">task design</a></li>
