--- a/index.html
+++ b/index.html
@@ -978,9 +978,9 @@ I am a passionate researcher and designer with a deep understanding of the conte
 			                    <i class="fas fa-envelope icon"></i>hsabouni[at]iastate[dot]edu
 			            </p>
 			            <p>
-			                <a href="https://www.linkedin.com/in/hilasabouni" target="_blank">
-			                    <i class="fab fa-linkedin icon"></i>www.linkedin.com/in/hilasabouni
-			                </a>
+			                
+			                    <i class="fab fa-linkedin icon"></i><a href="https://www.linkedin.com/in/hilasabouni" target="_blank">www.linkedin.com/in/hilasabouni</a>
+			                
 			            </p>
 			        </div>
 			</div>
