--- a/portfolio1.html
+++ b/portfolio1.html
@@ -128,11 +128,7 @@
 							<div class="single-about-txt">
 								<h3>
 									
-Introduction
-Virtual reality (VR) offers immersive experiences in areas like training and education, but effective guidance cues are needed to maintain immersion. Designing these cues to support user navigation without breaking presence is challenging.
-
-Problem Statement
-This study evaluates passive (rear-view mirror) and active (audio and haptic) guidance cues in a VR scavenger hunt task. By assessing their effects on user performance and immersion, this research provides insights into optimal guidance design for VR environments.
+How can we help users navigate virtual reality without breaking their sense of immersion? This mixed-method study evaluates passive (rear-view mirror) and active (audio and haptic) cues in a VR scavenger hunt, finding that haptics are the most effective, followed by audio, while rear-view mirrors prove unsuitable for such environments and tasks.
 								</h3>
 								<!--<p>
 									My work is driven by a commitment to creativity, effective communication, collaboration, and continuous innovation.
