--- a/portfolio1.html
+++ b/portfolio1.html
@@ -213,7 +213,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>Task design</h2>
-									<!--<h3>Bachelor <span>of </span> Architecture</h3>
+									<h3>Bachelor <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -221,7 +221,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!--<h4 class="title">
+										<h4 class="title">
 											Azad University
 										</h4>
 										<h5>north carolina, USA</h5>-->
@@ -236,7 +236,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 							<div class="single-horizontal-timeline">
 								<div class="experience-time">
 									<h2>Study Design</h2>
-									<!--<h3>Master <span>of </span> Architecture</h3>
+									<h3>Master <span>of </span> Architecture</h3>
 								</div><!--/.experience-time-->
 								<div class="timeline-horizontal-border">
 									<i class="fa fa-circle" aria-hidden="true"></i>
@@ -244,7 +244,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!--<h4 class="title">
+										<h4 class="title">
 											Iowa State University
 										</h4>
 										<h5>north carolina, USA</h5>-->
