--- a/portfolio1.html
+++ b/portfolio1.html
@@ -221,16 +221,17 @@ How can we help users navigate virtual reality without breaking their sense of i
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<h4 class="title">
-											Azad University
-										</h4>
-										<h5>north carolina, USA</h5>-->
+										<!-- <h4 class="title">
+										Azad University
+									</h4>
+										<h5>north carolina, USA</h5> -->
 										<p class="description">
-											3 key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
+											Three key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
+						</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
