--- a/portfolio1.html
+++ b/portfolio1.html
@@ -221,7 +221,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 								</div>
 								<div class="timeline">
 									<div class="timeline-content">
-										<!-- <h4 class="title">
+										<h4 class="title">
 										Azad University
 									</h4>
 										<h5>north carolina, USA</h5> -->
