--- a/portfolio1.html
+++ b/portfolio1.html
@@ -222,16 +222,15 @@ How can we help users navigate virtual reality without breaking their sense of i
 								<div class="timeline">
 									<div class="timeline-content">
 										<h4 class="title">
-										Azad University
-									</h4>
-										<h5>north carolina, USA</h5> -->
+											Azad University
+										</h4>
+										<h5>north carolina, USA</h5>-->
 										<p class="description">
-											Three key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
+											3 key steps: selecting an environment, 3D modeling, equipment and interactions, conditions.
 										</p>
 									</div><!--/.timeline-content-->
 								</div><!--/.timeline-->
 							</div>
-						</div>
 						</div>
 						<div class="col-sm-3">
 							<div class="single-horizontal-timeline">
