--- a/portfolio1.html
+++ b/portfolio1.html
@@ -436,6 +436,33 @@ How can we help users navigate virtual reality without breaking their sense of i
 										<div class="row">
 											<div class="col-md-5">
 												<div class="task design-time text-right">
+													<h2>Task</h2>
+													<h3>Google map, AutoCad, Rhino 3D</h3>
+												</div><!--/.task design-time-->
+											</div><!--/.col-->
+											<div class="col-md-offset-1 col-md-5">
+												<div class="timeline">
+													<div class="timeline-content">
+														<h4 class="title">
+															<span><i class="fa fa-circle" aria-hidden="true"></i></span>
+															 
+														</h4>
+														<h5></h5>
+														<p class="description">
+															The task was an engaging scavenger hunt in a museum, where participants were asked to find seven specific paintings among the many on display.
+														</p>
+													</div><!--/.timeline-content-->
+												</div><!--/.timeline-->
+											</div><!--/.col-->
+										</div>
+									</div><!--/.single-timeline-box-->
+								</li>
+								
+								<li>
+									<div class="single-timeline-box fix">
+										<div class="row">
+											<div class="col-md-5">
+												<div class="task design-time text-right">
 													<h2>spatial environment</h2>
 													<h3>Google map, AutoCad, Rhino 3D</h3>
 												</div><!--/.task design-time-->
@@ -449,7 +476,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 														</h4>
 														<h5></h5>
 														<p class="description">
-															The virtual environment modeled a section of the Louvre Museum's Denon wing, featuring rooms 700–702 and 710–712 to ensure a balanced layout. Approximately 30% of the paintings were removed to maintain participant focus. 
+															The virtual environment recreated a section of the Louvre Museum's Denon wing, featuring rooms 700–702 and 710–712 to ensure a balanced layout. Approximately 30% of the paintings were removed to maintain participant focus. 
 														</p>
 													</div><!--/.timeline-content-->
 												</div><!--/.timeline-->
