--- a/portfolio1.html
+++ b/portfolio1.html
@@ -437,7 +437,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 											<div class="col-md-5">
 												<div class="task design-time text-right">
 													<h2>Task</h2>
-													<h3>Google map, AutoCad, Rhino 3D</h3>
+													<h3></h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
@@ -464,7 +464,7 @@ How can we help users navigate virtual reality without breaking their sense of i
 											<div class="col-md-5">
 												<div class="task design-time text-right">
 													<h2>spatial environment</h2>
-													<h3>Google map, AutoCad, Rhino 3D</h3>
+													<h3>Google map, AutoCad, Rhinoceros 3D</h3>
 												</div><!--/.task design-time-->
 											</div><!--/.col-->
 											<div class="col-md-offset-1 col-md-5">
